2003-12-14  Guilhem Lavaux <guilem@kaffe.org>

	* gnu/testlet/java/io/ObjectInputOutput/Compat1.java,
	gnu/testlet/java/io/ObjectInputOutput/Compat2.java,
	gnu/testlet/java/io/ObjectInputOutput/Compat1.serial.bin,
	gnu/testlet/java/io/ObjectInputOutput/Compat2.serial.bin:
	New tests

2003-12-08  Bryce McKinlay  <bryce@mckinlay.net.nz>

	* gnu/testlet/java/util/Hashtable/NullValue.java: New test.

2003-12-01  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/java/awt/image/PixelGrabber/SimpleGrabber.java,
	gnu/testlet/java/awt/image/PixelGrabber/lena1.jpg:
	New test.

2003-11-28  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/security/DigestInputStream/readMD5.java: New test.

2003-11-27  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/util/Calendar/ampm.java: New test.

2003-11-27  Mark Wielaard  <mark@klomp.org>

	* choose-classes: New script.
	* uses-list: New script.
	* runner: New script.
	* batch_run: New script.

2003-11-25  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/zip/ZipFile/newZipFile.java: New test.

2003-11-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/Hashtable/ContainsHash.java: New test.

2003-11-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/text/DecimalFormatSymbols/serial.java: New test.

2003-11-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/Hashtable/HashContains.java: New test.

2003-11-16  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/StreamTokenizer/commentchar.java: Expect
	EOL, not EOF.

	* gnu/testlet/java/io/StreamTokenizer/commentchar.java
	(tokenize): New overloaded method.
	(make_tokenizer): New method.
	(test): Added new test.

2003-11-14  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/javax/swing/undo/AbstractUndoableEdit/addEdit.java,
	gnu/testlet/javax/swing/undo/AbstractUndoableEdit/canRedo.java,
	gnu/testlet/javax/swing/undo/AbstractUndoableEdit/canUndo.java,
	gnu/testlet/javax/swing/undo/AbstractUndoableEdit/
	getPresentationName.java,