@@ -1,10 +1,16 @@
+2003-12-15  Guilhem Lavaux <guilem@kaffe.org>
+
+	* gnu/testlet/java/io/ObjectInputOutput/Compat1.java,
+	gnu/testlet/java/io/ObjectInputOutput/Compat2.java:
+	Added copyright advertisement.
+
 2003-12-14  Guilhem Lavaux <guilem@kaffe.org>
 
 	* gnu/testlet/java/io/ObjectInputOutput/Compat1.java,
 	gnu/testlet/java/io/ObjectInputOutput/Compat2.java,
 	gnu/testlet/java/io/ObjectInputOutput/Compat1.serial.bin,
 	gnu/testlet/java/io/ObjectInputOutput/Compat2.serial.bin:
-	New tests
+	New tests.
 
 2003-12-08  Bryce McKinlay  <bryce@mckinlay.net.nz>
 
